vlib/v/checker/tests/enum_op_flag_err.out
vlib/v/checker/tests/enum_op_flag_err.vv:16:24: error: only `==`, `!=`, `|`, `&`, `^` and `~` are defined on `@[flag]` tagged `enum`, use an explicit cast to `int` if needed
   14 | 
   15 | fn main() {
   16 |     println(FilePerm.read > FilePerm.write)
      |                           ^
   17 |     println(FilePerm.write + FilePerm.exec)
   18 |     println(FilePerm.write && FilePerm.exec)
vlib/v/checker/tests/enum_op_flag_err.vv:17:25: error: only `==`, `!=`, `|`, `&`, `^` and `~` are defined on `@[flag]` tagged `enum`, use an explicit cast to `int` if needed
   15 | fn main() {
   16 |     println(FilePerm.read > FilePerm.write)
   17 |     println(FilePerm.write + FilePerm.exec)
      |                            ^
   18 |     println(FilePerm.write && FilePerm.exec)
   19 |
vlib/v/checker/tests/enum_op_flag_err.vv:18:10: error: left operand for `&&` is not a boolean
   16 |     println(FilePerm.read > FilePerm.write)
   17 |     println(FilePerm.write + FilePerm.exec)
   18 |     println(FilePerm.write && FilePerm.exec)
      |             ~~~~~~~~~~~~~~
   19 | 
   20 |     f := Flags.bit0 | Flags.bit1
vlib/v/checker/tests/enum_op_flag_err.vv:18:28: error: right operand for `&&` is not a boolean
   16 |     println(FilePerm.read > FilePerm.write)
   17 |     println(FilePerm.write + FilePerm.exec)
   18 |     println(FilePerm.write && FilePerm.exec)
      |                               ~~~~~~~~~~~~~
   19 | 
   20 |     f := Flags.bit0 | Flags.bit1
vlib/v/checker/tests/enum_op_flag_err.vv:18:25: error: only `==`, `!=`, `|`, `&`, `^` and `~` are defined on `@[flag]` tagged `enum`, use an explicit cast to `int` if needed
   16 |     println(FilePerm.read > FilePerm.write)
   17 |     println(FilePerm.write + FilePerm.exec)
   18 |     println(FilePerm.write && FilePerm.exec)
      |                            ~~
   19 | 
   20 |     f := Flags.bit0 | Flags.bit1
vlib/v/checker/tests/enum_op_flag_err.vv:20:18: error: only `==` and `!=` are defined on `enum`, use an explicit cast to `int` if needed
   18 |     println(FilePerm.write && FilePerm.exec)
   19 | 
   20 |     f := Flags.bit0 | Flags.bit1
      |                     ^
   21 |     println(~f)
   22 | }
vlib/v/checker/tests/enum_op_flag_err.vv:21:10: error: operator `~` can only be used with `@[flag]` tagged enums
   19 | 
   20 |     f := Flags.bit0 | Flags.bit1
   21 |     println(~f)
      |             ^
   22 | }
