vlib/v/checker/tests/enum_op_flag_err.vv
@[flag]
enum FilePerm {
	read
	write
	exec
}

enum Flags {
	bit0
	bit1
	bit2
	bit3
}

fn main() {
	println(FilePerm.read > FilePerm.write)
	println(FilePerm.write + FilePerm.exec)
	println(FilePerm.write && FilePerm.exec)

	f := Flags.bit0 | Flags.bit1
	println(~f)
}
